--- a/template/template_footer.html
+++ b/template/template_footer.html
@@ -1,6 +1,6 @@
 
 <div id="footer" class="fluid">
-	Copyright &copy; 2006 Your Website. All rights reserved. Design by <a href="http://www.nodethirtythree.com/">NodeThirtyThree Design</a>.
+	All data Copyright &copy; 2012 OpenStreetMap Contributors (<a href="http://www.openstreetmap.org/copyright">License</a>)
 </div>
 
 </body>
